convert to wally package

--- a/default.project.json
+++ b/default.project.json
@@ -1,16 +1,6 @@
 {
-  "name": "Libraries",
+  "name": "dLib",
   "tree": {
-    "$className": "DataModel",
-    "ReplicatedStorage": {
-      "$className": "ReplicatedStorage",
-      "$ignoreUnknownInstances": true,
-      "$path": "src/ReplicatedStorage"
-    },
-    "ServerScriptService": {
-      "$className": "ServerScriptService",
-      "$ignoreUnknownInstances": true,
-      "$path": "src/ServerScriptService"
-    }
+    "$path": "src"
   }
 }
