--- a/wally.toml
+++ b/wally.toml
@@ -1,7 +1,7 @@
 [package]
-name = "dig1t/dLib"
+name = "dig1t/dlib"
 version = "1.2.0"
-license = "MIT"
+license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
