--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dlib-library",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/init.luau",
   "scripts": {
     "build:rojo": "rojo build -o dLib.rbxl dev.project.json",
     "build": "npm run build:rojo",
