--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,11 @@
 [package]
 name = "dig1t/dlib"
-version = "1.1.4"
+version = "1.1.5"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
+
+include = ["src", "src/**", "wally.toml", "default.project.json"]
+exclude = ["**"]
 
 [dependencies]
