--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,8 @@
 {
   "luau-lsp.require.mode": "relativeToFile",
-	"luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
-  
-	"[lua]": {
-		"editor.formatOnSave": true,
-		"editor.defaultFormatter": "EditorConfig.EditorConfig"
-	},
-	"[luau]": {
-		"editor.formatOnSave": true,
-		"editor.defaultFormatter": "EditorConfig.EditorConfig"
-	}
+  "luau-lsp.sourcemap.rojoProjectFile": "default.project.json",
+
+  "files.exclude": {
+    "build": true
+  }
 }
