--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  analyze:
+  publish-documentation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,8 +18,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: publish documentation to GitHub pages
-        run: npx moonwave build --publish
+      - name: Publish Documentation to GitHub Pages
+        run: |
+          git config user.name "$(git log -n 1 --pretty=format:%an)"
+          git config user.email "$(git log -n 1 --pretty=format:%ae)"
+          moonwave build --publish
