--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/init.luau",
   "scripts": {
     "build:rojo": "rojo build -o dLib.rbxl dev.project.json",
+    "build:docs": "moonwave build",
     "build": "npm run build:rojo",
     "dev": "npm run build && dLib.rbxl && npm start",
     "start": "rojo serve dev.project.json"
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/dig1t/dlib/issues"
   },
-  "homepage": "https://github.com/dig1t/dlib#readme"
+  "homepage": "https://dig1t.github.io/dlib",
+  "dependencies": {
+    "moonwave": "^1.1.2"
+  }
 }
