change run condition

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,10 @@ name: Deploy Moonwave Documentation to Pages
 on:
   push:
     branches: ["main"]
+    paths:
+      - 'src/**'
+      - 'docs/**'
+      - 'moonwave.toml'
 
   workflow_dispatch:
 
