--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: 20
 
     - name: Install aftman dependencies
       uses: ok-nick/setup-aftman@v0.4.2
