update docs action

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,14 +1,13 @@
-name: Deploy Moonwave Documentation to Pages
+name: Deploy documentation to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
     paths:
       - 'src/**'
       - 'docs/**'
       - 'moonwave.toml'
-
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -20,11 +19,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
+  deploy-docs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
