--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/init.luau",
   "scripts": {
     "build:dependencies": "wally install",
-    "build:rojo": "rojo build -o dev-build.rbxl dev.project.json",
+    "build:rojo": "rojo build -o dev-build.rbxl build.project.json",
     "build:docs": "moonwave build",
     "build": "npm run build:dependencies && npm run build:rojo",
 
@@ -13,7 +13,7 @@
     "test": "npm run build && npm run test:run",
 
     "dev": "npm run build && dev-build.rbxl && npm start",
-    "start": "rojo serve dev.project.json"
+    "start": "rojo serve build.project.json"
   },
   "repository": {
     "type": "git",
