--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,7 @@
 [package]
 name = "dig1t/dlib"
 version = "1.1.10"
+description = "Package description"
 license = "Apache-2.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
