--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup node
         uses: actions/setup-node@v4
@@ -118,7 +116,8 @@ jobs:
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
           git commit -m "Update to ${needs.get_published_release.outputs.tag_name}"
-          git push origin main
+          git fetch origin HEAD:main
+          git push origin HEAD:main --force-with-lease
           echo "Commit amended"
 
       - name: Build package
