--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,8 +116,9 @@ jobs:
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
           git commit -m "Update to ${needs.get_published_release.outputs.tag_name}"
-          git fetch origin HEAD:main
-          git push origin HEAD:main --force-with-lease
+          git fetch origin main
+          git merge FETCH_HEAD
+          git push origin main
           echo "Commit amended"
 
       - name: Build package
