--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,8 +115,8 @@ jobs:
           git config user.name "$(git log -n 1 --pretty=format:%an)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
-          git pull --rebase origin main
-          git push -u origin main
+          git pull --prune
+          git push -u origin main --force-with-lease
           echo "Commit amended"
 
       - name: Build package
