--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,6 +117,7 @@ jobs:
           git config user.name "$(git log -n 1 --pretty=format:%an)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
+          git commit -m "Update to ${needs.get_published_release.outputs.tag_name}"
           git push -u origin main --force-with-lease
           echo "Commit amended"
 
