--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,12 +7,23 @@ on:
     types: [published]
 
 jobs:
-  get-published-release:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          fetch-depth: 0
+          submodules: recursive
+
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Set Release Info
-        id: release-info
         run: |
           repo_name=${{ github.repository }}
           repo_owner_name=${{ github.repository_owner }}
@@ -36,37 +47,17 @@ jobs:
           repo_desc=$(echo "$desc" | grep -o '"[^"]*"')
           echo "REPO_DESC=$repo_desc" >> $GITHUB_ENV
 
-  publish:
-    needs: get-published-release
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: main
-          fetch-depth: 0
-          submodules: recursive
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
       - name: Update files with new version
         shell: bash
         run: |
-          repo_owner="${{env.REPO_OWNER}}"
-          repo_name="${{env.REPO_NAME}}"
-          repo_desc=${{env.REPO_DESC}}
-          goal_version_str="${{env.TAG_NAME}}"
+          goal_version_str=${TAG_NAME#v}
 
           # read wally.toml file
           wally_toml_contents=$(<wally.toml)
 
           # swap out name
           target_name_line=$(echo "$wally_toml_contents" | grep -F "name = ")
-          goal_name_line="name = \"${repo_owner}/${repo_name}\""
+          goal_name_line="name = \"${REPO_OWNER}/${REPO_NAME}\""
           wally_toml_contents="${wally_toml_contents/${target_name_line}/${goal_name_line}}"
 
           # swap out version
@@ -76,7 +67,7 @@ jobs:
 
           # swap out description
           target_desc_line=$(echo "$wally_toml_contents" | grep -F "description = ")
-          goal_desc_line="description = \"${repo_desc}\""
+          goal_desc_line="description = \"${REPO_DESC}\""
           wally_toml_contents="${wally_toml_contents/${target_desc_line}/${goal_desc_line}}"
 
           # update wally.toml file
@@ -93,8 +84,8 @@ jobs:
 
           # read README.md file
           readme_contents=$(<README.md)
-          target_readme_version_line=$(echo "$readme_contents" | grep -F "${repo_name} = \"${repo_owner}/${repo_name}@")
-          goal_readme_version_line="  ${repo_name} = \"${repo_owner}/${repo_name}@${goal_version_str#v}\""
+          target_readme_version_line=$(echo "$readme_contents" | grep -F "${REPO_NAME} = \"${REPO_OWNER}/${REPO_NAME}@")
+          goal_readme_version_line="  ${REPO_NAME} = \"${REPO_OWNER}/${REPO_NAME}@${goal_version_str#v}\""
           readme_contents="${readme_contents/${target_readme_version_line}/${goal_readme_version_line}}"
 
           # update README.md file
@@ -111,19 +102,19 @@ jobs:
           git config user.name "$(git log -n 1 --pretty=format:%an)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
-          git commit -m "Update to ${{ env.TAG_NAME }}"
+          git commit -m "Update to $TAG_NAME"
           git push -u origin main --force-with-lease
           echo "Commit amended"
 
       - name: Build package
-        run: rojo build -o ${{ env.REPO_NAME }}.rbxl build.project.json
+        run: rojo build -o $REPO_NAME.rbxl build.project.json
 
       - name: Upload Roblox level file to release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ env.UPLOAD_URL }}
-          asset_path: ${{ env.REPO_NAME }}.rbxl
-          asset_name: ${{ env.REPO_NAME }}.rbxl
+          upload_url: $UPLOAD_URL
+          asset_path: $REPO_NAME.rbxl
+          asset_name: $REPO_NAME.rbxl
           asset_content_type: application/octet-stream
