--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,9 +78,9 @@ jobs:
           # update README.md file
           echo "$readme_contents" > README.md
 
-          echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_OUTPUT
-          echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_OUTPUT
-          echo "UPLOAD_URL=${UPLOAD_URL}" >> $GITHUB_OUTPUT
+          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_OUTPUT
+          echo "REPO_NAME=$REPO_NAME" >> $GITHUB_OUTPUT
+          echo "UPLOAD_URL=$UPLOAD_URL" >> $GITHUB_OUTPUT
 
       - name: Install aftman dependencies
         uses: ok-nick/setup-aftman@v0.4.2
@@ -89,7 +89,7 @@ jobs:
         run: npm run build:dependencies
 
       - name: Build package
-        run: rojo build -o $REPO_NAME.rbxl build.project.json
+        run: rojo build -o ${steps.update-files.outputs.REPO_NAME}.rbxl build.project.json
 
       - name: Upload Roblox level file to release
         uses: actions/upload-release-asset@v1
