--- a/moonwave.toml
+++ b/moonwave.toml
@@ -10,4 +10,4 @@ onBrokenMarkdownLinks = "warn"
 
 [footer]
 style = "dark"
-copyright = "Copyright © 2023 dig1t. Built with Moonwave and Docusaurus"
+copyright = "Copyright © dig1t. Built with Moonwave and Docusaurus"
