--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,7 +101,7 @@ jobs:
         run: wally login --token ${{ secrets.WALLY_TOKEN }}
 
       - name: Publish to wally
-        run: wally publish --token ${{ secrets.WALLY_TOKEN }}
+        run: wally publish
 
       - name: Build package place file
         run: rojo build -o ${{ steps.update-files.outputs.REPO_NAME }}.rbxl build.project.json
