--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,12 +100,11 @@ jobs:
       - name: Prepare for wally authentication
         shell: pwsh
         run: |
-          mkdir -p $HOME/.wally
-          echo '${{ secrets.WALLY_TOKEN }}' > $HOME/.wally/auth.toml
+          mkdir -p $env:USERPROFILE/.wally
+          echo '${{ secrets.WALLY_AUTH }}' > $env:USERPROFILE/.wally/auth.toml
 
       - name: Publish to wally
-        run: wally publish --token ${{ secrets.WALLY_TOKEN }}
-        timeout-minutes: 5
+        run: wally publish
 
       - name: Build package place file
         run: rojo build -o ${{ steps.update-files.outputs.REPO_NAME }}.rbxl build.project.json
