--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     outputs:
       TAG_NAME: ${{ steps.update-files.outputs.handle }}
@@ -97,19 +97,15 @@ jobs:
           git push -u origin main --force-with-lease
           echo "Commit amended"
 
-      - name: Prepare for wally authentication
-        shell: pwsh
-        run: |
-          mkdir -p $env:USERPROFILE/.wally
-          echo '${{ secrets.WALLY_AUTH }}' > $env:USERPROFILE/.wally/auth.toml
-
-          # Find the first directory that matches the pattern
-          $dir=Get-ChildItem -Path "$env:USERPROFILE\AppData\Local\wally\index\github.com-*/config.json" -File | Select-Object -First 1
-
-          Set-Content -Path $dir.FullName -Value '${{ secrets.GH_AUTH }}'
-
       - name: Publish to wally
-        run: wally publish
+        shell: bash
+        env:
+          WALLY_TOKEN: ${{ secrets.WALLY_TOKEN }}
+        run: |
+          rm -rf packages roblox.toml testez.toml .github .foreman-install node_modules .vscode
+          mkdir -p ~/.wally
+          printf "[tokens]\n\"https://api.wally.run/\" = \"%s\"" "$WALLY_TOKEN" >> ~/.wally/auth.toml
+          wally publish
 
       - name: Build package place file
         run: rojo build -o ${{ steps.update-files.outputs.REPO_NAME }}.rbxl build.project.json
