--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,27 +82,27 @@ jobs:
           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_OUTPUT
           echo "UPLOAD_URL=$UPLOAD_URL" >> $GITHUB_OUTPUT
 
-      - name: Install aftman dependencies
-        uses: ok-nick/setup-aftman@v0.4.2
-
-      - name: Install dependencies
-        run: npm run build:dependencies
-
-      - name: Amend the last commit
+      - name: Commit files with new version
         run: |
           git config user.name "$(git log -n 1 --pretty=format:%an)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           git add --all
           git commit -m "Update to ${{ steps.update-files.outputs.TAG_NAME }}"
           git push -u origin main --force-with-lease
-          echo "Commit amended"
+          echo "Committed changes"
+
+      - name: Install aftman dependencies
+        uses: ok-nick/setup-aftman@v0.4.2
+
+      - name: Install dependencies
+        run: npm run build:dependencies
 
       - name: Publish to wally
         shell: bash
         env:
           WALLY_TOKEN: ${{ secrets.WALLY_TOKEN }}
         run: |
-          rm -rf packages roblox.toml testez.toml .github .foreman-install node_modules .vscode
+          rm -rf packages testez.toml .github node_modules .vscode
           mkdir -p ~/.wally
           printf "[tokens]\n\"https://api.wally.run/\" = \"%s\"" "$WALLY_TOKEN" >> ~/.wally/auth.toml
           wally publish
@@ -119,12 +119,3 @@ jobs:
           asset_path: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
           asset_name: ${{ steps.update-files.outputs.REPO_NAME }}.rbxl
           asset_content_type: application/octet-stream
-
-      - name: Upload to Roblox
-        shell: bash
-        run: |
-          find ./src -name "*.spec.lua" -type f -delete
-          rojo upload default.project.json --asset_id $ASSET_ID --cookie "$ROBLOSECURITY"
-        env:
-          ROBLOSECURITY: ${{ secrets.ROBLOSECURITY }}
-          ASSET_ID: ${{ vars.RBLX_ASSET_ID }}
